updated to latest versions